Add concept for green success version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <a href="#">
     <div class="text-center vert-center">
       <div role="button" class="opal">
-        <div class="opal-inner">Try Me</div>
+        <div class="opal-inner">
+          Try Me
+        </div>
       </div>
     </div>
   </a>
