Implement basic on-click success color change

--- a/index.html
+++ b/index.html
@@ -15,18 +15,33 @@
 </head>
 
 <body>
-  <a href="#">
-    <div class="text-center vert-center">
-      <div role="button" class="opal">
-        <div class="opal-inner">
-          Try Me
+  <div class="row">
+    <div class="offset-md-2 col-md-3">
+      <a href="#">
+        <div class="text-center vert-center">
+          <div role="button" class="opal opal-solid" onclick="event.target.classList.add('active');">
+            <!-- <div class="opal-inner" onclick="event.target.parentNode.classList.add('active');"> -->
+            Try Me
+            <!-- </div> -->
+          </div>
         </div>
-      </div>
+      </a>
     </div>
-  </a>
-  <!-- <a href="#">
-    <div class="opal-container">
-      <div class="opal-background"></div>
+    <div class="col-md-3">
+      <a href="# ">
+        <div class="text-center vert-center ">
+          <div role="button " class="opal " onclick="event.target.classList.add( 'active'); ">
+            <div class="opal-inner " onclick="event.target.parentNode.classList.add( 'active'); ">
+              Try Me
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <!-- <a href="# ">
+    <div class="opal-container ">
+      <div class="opal-background "></div>
     </div>
   </a> -->
 </body>
