Add several different color presets and modify background image for resizing

--- a/index.html
+++ b/index.html
@@ -15,35 +15,183 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="offset-md-2 col-md-3">
-      <a href="#">
-        <div class="text-center vert-center">
-          <div role="button" class="opal opal-solid" onclick="event.target.classList.add('active');">
-            <!-- <div class="opal-inner" onclick="event.target.parentNode.classList.add('active');"> -->
-            Try Me
-            <!-- </div> -->
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-md-3">
-      <a href="# ">
-        <div class="text-center vert-center ">
-          <div role="button " class="opal " onclick="event.target.classList.add( 'active'); ">
-            <div class="opal-inner " onclick="event.target.parentNode.classList.add( 'active'); ">
-              Try Me
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center">
+            <div role="button" class="opal">
+              <div class="opal-solid">
+                This is Opalescent
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center">
+            <div role="button" class="opal">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="# ">
+          <div class="text-center">
+            <div role="button " class="opal">
+              <div class="opal-inner ">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-rainbow">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-rainbow">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-rainbow">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-rainbow2">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-rainbow2">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-rainbow2">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal active">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal active">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal active">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-bright">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-bright">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-bright">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-  <!-- <a href="# ">
-    <div class="opal-container ">
-      <div class="opal-background "></div>
-    </div>
-  </a> -->
 </body>
 
 </html>
