Add a few new color presets

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       <div class="col-md-4">
         <a href="#">
           <div class="text-center">
+            <!-- <div class="shadow-test"> -->
             <div role="button" class="opal">
               <div class="opal-solid">
-                This is Opalescent
+                Try Me
               </div>
             </div>
+            <!-- </div> -->
           </div>
         </a>
       </div>
@@ -43,7 +45,7 @@
         <a href="# ">
           <div class="text-center">
             <div role="button " class="opal">
-              <div class="opal-inner ">
+              <div class="opal-inner">
                 Try Me
               </div>
             </div>
@@ -183,6 +185,111 @@
         <a href="#">
           <div class="text-center ">
             <div role="button" class="opal opal-bright">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-dark">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-dark">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-dark">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-light">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-light">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-light">
+              <div class="opal-inner">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-awake opal-light opal-outline">
+              <div class="opal-solid">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-awake opal-light opal-outline">
+              <div class="opal-solid opal-soften">
+                Try Me
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#">
+          <div class="text-center ">
+            <div role="button" class="opal opal-awake opal-light opal-outline">
               <div class="opal-inner">
                 Try Me
               </div>
