--- a/index.html
+++ b/index.html
@@ -9,29 +9,107 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="index.css" type="text/css">
+  <link rel="stylesheet" href="opalescent.css" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:400,700|Oxygen:400,700" rel="stylesheet">
 </head>
 
 <body>
+  <div class="container-fluid">
+    <div class="opal-header opal-rainbow2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9 col-sm-12">
+            <h1>Opalescent CSS</h1>
+            <h3>
+              <a id="white-link" href="http://cwgillette.com" target="_blank">By Conner Gillette</a>
+            </h3>
+          </div>
+          <div class="col-md-3 col-sm-12 text-center">
+            <a href="index.css" download>
+              <div class="opal opal-clear isolate" role="button">
+                <div class="opal-solid opal-soften">
+                  Download CSS
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <h2>Beautiful, colorful, eye-catching CSS buttons.</h2>
+    <p>
+      Opalescent offers styles for animated gradient buttons in a variety of colors and styles using vanilla CSS. They are easily
+      customizable to reflect your brand's colors, motion curves, and shapes.
+    </p>
+    <div class="row button-row">
+      <div class="offset-md-3 col-md-2">
+        <a href="#">
+          <div class="text-center">
+            <div role="button" class="opal fill opal-rainbow2">
+              <div class="opal-solid">
+                Solid
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-2">
+        <a href="#">
+          <div class="text-center">
+            <div role="button" class="opal fill opal-rainbow2">
+              <div class="opal-solid opal-soften">
+                Softened
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-2">
+        <a href="#">
+          <div class="text-center">
+            <div role="button" class="opal fill opal-rainbow2">
+              <div class="opal-inner">
+                Framed
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <h2>Getting started</h2>
+    <p>After downloading the CSS file using the button at the top of the page, move or copy it into your project directory.
+      Then, link the file to your HTML page like so:</p>
+    <div class="text-center">
+      <code>
+        &lt;link href="./yourfilepath/opalescent.css" rel="stylesheet" type="text/css"&gt;
+      </code>
+    </div>
+    <h2>Classes</h2>
+  </div>
+
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center">
-            <!-- <div class="shadow-test"> -->
-            <div role="button" class="opal">
-              <div class="opal-solid">
-                Try Me
+            <div class="shadow-test">
+              <div role="button" class="opal">
+                <div class="opal-solid">
+                  Try Me
+                </div>
               </div>
             </div>
-            <!-- </div> -->
           </div>
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center">
             <div role="button" class="opal">
               <div class="opal-solid opal-soften">
@@ -55,7 +133,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-rainbow">
               <div class="opal-solid">
@@ -66,7 +144,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-rainbow">
               <div class="opal-solid opal-soften">
@@ -77,7 +155,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-rainbow">
               <div class="opal-inner">
@@ -90,7 +168,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-rainbow2">
               <div class="opal-solid">
@@ -101,7 +179,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-rainbow2">
               <div class="opal-solid opal-soften">
@@ -112,7 +190,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-rainbow2">
               <div class="opal-inner">
@@ -125,7 +203,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal active">
               <div class="opal-solid">
@@ -136,7 +214,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal active">
               <div class="opal-solid opal-soften">
@@ -147,7 +225,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal active">
               <div class="opal-inner">
@@ -160,7 +238,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-bright">
               <div class="opal-solid">
@@ -171,7 +249,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-bright">
               <div class="opal-solid opal-soften">
@@ -182,7 +260,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-bright">
               <div class="opal-inner">
@@ -195,7 +273,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-dark">
               <div class="opal-solid">
@@ -206,7 +284,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-dark">
               <div class="opal-solid opal-soften">
@@ -217,7 +295,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-dark">
               <div class="opal-inner">
@@ -230,7 +308,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-light">
               <div class="opal-solid">
@@ -241,7 +319,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-light">
               <div class="opal-solid opal-soften">
@@ -252,7 +330,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-light">
               <div class="opal-inner">
@@ -265,7 +343,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-awake opal-light opal-outline">
               <div class="opal-solid">
@@ -276,7 +354,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-awake opal-light opal-outline">
               <div class="opal-solid opal-soften">
@@ -287,7 +365,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="#">
+        <a href="">
           <div class="text-center ">
             <div role="button" class="opal opal-awake opal-light opal-outline">
               <div class="opal-inner">
