--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
   <link href="https://fonts.googleapis.com/css?family=Catamaran:400,700|Oxygen:400,700" rel="stylesheet">
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121620203-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121620203-1');
+</script>
+
 <body>
   <div class="container-fluid">
     <div class="opal-header opal-rainbow-soft">
