--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="col-xs-12 col-md-3 text-center">
             <a href="opalescent.css" download>
-              <div class="opal opal-clear isolate" role="button">
+              <div class="opal opal-clear isolate" role="button" onclick="ga('send', 'event', 'Download', 'click', 'v1.0.0');">
                 <div class="opal-solid opal-soften">
                   Download CSS
                 </div>
