--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-121620203-1');
+
+  function trackDownload() {
+    ga('send', {
+      hitType: 'event',
+      eventCategory: 'Download',
+      eventAction: 'click',
+      eventLabel: '1.0.0'
+    });
+  }
 </script>
 
 <body>
@@ -42,7 +51,7 @@
           </div>
           <div class="col-xs-12 col-md-3 text-center">
             <a href="opalescent.css" download>
-              <div class="opal opal-clear isolate" role="button" onclick="ga('send', {hitType: 'event',eventCategory: 'Download', eventAction: 'click', eventLabel: '1.0.0'});">
+              <div class="opal opal-clear isolate" role="button" onclick="trackDownload();">
                 <div class="opal-solid opal-soften">
                   Download CSS
                 </div>
