Modify GA download tracking

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-121620203-1');
+</script>
 
+<script>
   function trackDownload() {
     ga('send', {
       hitType: 'event',
