Add test output for trackDownload()

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   //   });
   // }
   function trackDownload() {
+    console.log('Registering click with Quantum...');
     xhttp.open('POST', 'http://quantum-analytics.herokuapp.com', true);
     xhttp.send();
   }
