--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   // }
   function trackDownload() {
     console.log('Registering click with Quantum...');
+    let xhttp = new XMLHttpRequest();
     xhttp.open('POST', 'http://quantum-analytics.herokuapp.com', true);
     xhttp.send();
   }
