Update POST URL to reflect HTTPS change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   function trackDownload() {
     console.log('Registering click with Quantum...');
     let xhttp = new XMLHttpRequest();
-    xhttp.open('POST', 'http://quantum-analytics.herokuapp.com', true);
+    xhttp.open('POST', 'https://quantum-analytics.herokuapp.com', true);
     xhttp.send();
   }
 </script>
